<?xml version="1.0"?>
<package format="3">
  <name>magni_description</name>
  <version>0.1.0</version>
  <description>
    ROS2-Paket für die Roboterbeschreibung des Magni-Roboters.
    Enthält URDF/XACRO-Dateien und Launch-Dateien.
  </description>
  <maintainer email="your_email@example.com">Dein Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Abhängigkeiten für den Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>

  <!-- Abhängigkeiten zur Laufzeit -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
